tests/paczka1/small_fuzzy/93441617.err
Error in line 6: CqCim S971 68,1
Error in line 4: 2KnKXih S971 41,7
Error in line 16: OVN S404 -1,8
